compiler/test/conformance/invalid/inv_unclosed_brace.tu
// INVÁLIDO: chave "{" não fechada no corpo do struct
struct Point {
  x: Int
  y: Int
